<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">imadoko</string>
    <string name="action_settings">Settings</string>
    <string name="connectoin_icon">connection icon</string>
    <string name="debug_log_line">7</string>
    <string name="geofence_log_line">3</string>
    <string name="stop_button">停止</string>
    <string name="start_button">接続</string>
    <string name="switch_text">接続状態</string>
    <string name="switch_off">停止</string>
    <string name="switch_on">接続</string>
    <string name="dialog_create_user_text">ユーザ名を新規登録</string>
    <string name="dialog_title1_text">表示するユーザ名を入力</string>
    <string name="dialog_title2_text">位置情報提供を許可</string>
    <string name="dialog_locpermission">提供を許可する</string>
    <string name="default_connection_user_num">接続ユーザ数：0</string>
    <string name="settings_buttion_description">settings button</string>
</resources>
