<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.imadoko.app.MainActivity" >

    <ImageView
        android:id="@+id/connection_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="52sp"
        android:background="#000"
        android:contentDescription="@+id/connectoin_icon"
        android:src="@drawable/disconnect" />

    <TextView
        android:id="@+id/connection_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/connection_image"
        android:gravity="center"
        android:text=""
        android:textColor="#fff"
        android:textSize="22sp" />

    <Button
        android:id="@+id/start_button"
        style="@style/AppBaseTheme"
        android:layout_width="120sp"
        android:layout_height="40sp"
        android:layout_alignBaseline="@+id/stop_button"
        android:layout_alignBottom="@+id/stop_button"
        android:layout_alignRight="@+id/connection_image"
        android:background="#696969"
        android:enabled="true"
        android:text="@string/start_button"
        android:textColor="#fff"
        android:textSize="22sp" />

    <Button
        android:id="@+id/stop_button"
        style="@style/AppBaseTheme"
        android:layout_width="120sp"
        android:layout_height="40sp"
        android:layout_alignLeft="@+id/connection_image"
        android:layout_below="@+id/connection_image"
        android:background="#ff8c00"
        android:enabled="true"
        android:text="@string/stop_button"
        android:textColor="#fff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/debug_log"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="left"
        android:textColor="#fff"
        android:maxLines="@string/debug_log_line"
        android:textSize="12sp" />

</RelativeLayout>